sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: too many arguments for method getNombreValeurs: ()Int
	getNombreValeurs(1)
                        ^